Finalização do Projetogit add .git add .

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/helombrito/Aquela-da-Lactose.git"
   },
   "keywords": [],
-  "author": "GuilhermeDelfino",
+  "author": "HeloisaBrito",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/helombrito/Aquela-da-Lactose/issues"
